# docs/swagger.json
@@ -169,15 +169,6 @@
                         "name": "token",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "description": "password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
                     }
                 ],
                 "responses": {
@@ -191,7 +182,7 @@
                         }
                     },
                     "400": {
-                        "description": "Lack Necessary_Param."
+                        "description": "Fail."
                     },
                     "401": {
                         "description": "Token Invalid."
